# aiplanet

./: README.md  docker-compose.yml
api/: .env  .gitignore  pyproject.toml
api/app/: app.py
api/app/clients/: supabase_client.py
api/app/core/: config.py
api/app/dao/: documents_dao.py  messages_dao.py  workflows_dao.py
api/app/routes/: deps.py  documents.py  messages.py  metadata.py  sessions.py  workflow.py
api/app/schemas/: chat.py  common.py
api/app/services/: chat_service.py  documet_service.py  llm_service.py  workflow_service.py
api/app/utils/: web_search.py
api/clients/: supabase_client.py
backend/: .gitignore  Dockerfile  requirements.txt  scaffold.sh  supabase-schema.sql
backend/app/: .env.example  dependencies.py  main.py
backend/app/api/: deps.py
backend/app/auth/: jwt.py  rls.py
backend/app/clients/: chroma_client.py  gemini_client.py  supabase_client.py
backend/app/core/: ExecuteWorkflow.py  config.py  logging.py  supabase.py
backend/app/dao/: documents_dao.py  messages_dao.py  (+2 more)
client/: database.types.ts  next.config.ts  package.json
client/app/: globals.css  layout.tsx
client/common/: nodes.tsx  types.d.ts
client/components/: FileUpload.tsx  NewWrokflow.tsx  ThemeSwitcher.tsx  current-user-avatar.tsx  login-form.tsx  logout-button.tsx
client/css/: xy-themes.css
client/hooks/: use-current-user-name.ts  use-file-upload.ts
client/lib/: axios.ts  mutateFunctions.ts  queryFunctions.ts
client/providers/: tanstack-provider.tsx  workflow-store-provider.tsx
client/utils/: axios.ts  sanitizeFlow.tsx  utils.ts
(+66 files in other folders)
